maid-account-manager/kube/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: maid-account-manager-service
  labels:
    app: maid-account-manager-service
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: maid-account-manager-service

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: maid-account-manager-service-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maid-account-manager-service
  template:
    metadata:
      labels:
        app: maid-account-manager-service
        version: v1
    spec:
      containers:
        - name: maid-account-manager-service
          image: arunma/maid-account-manager:1.0
          resources:
            requests:
              cpu: "200m"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: maid-account-manager-service-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maid-account-manager-service
  template:
    metadata:
      labels:
        app: maid-account-manager-service
        version: v2
    spec:
      containers:
        - name: maid-account-manager-service
          image: arunma/maid-account-manager:2.0
          resources:
            requests:
              cpu: "200m"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: maid-account-manager-service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: maid-account-manager-service
spec:
  hosts:
    - "*"
  gateways:
    - maid-account-manager-service-gateway
  http:
  - match:
    - uri:
        exact: /api/bill/get
    - uri:
        exact: /api/bill/pay
    route:
      - destination:
          host: maid-account-manager-service
          port:
            number: 8080
          subset: v1

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: maid-account-manager-service
spec:
  host: maid-account-manager-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      #loadBalancer:
      #  simple: ROUND_ROBIN
      connectionPool:
        tcp:
          maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
