maid-account-manager/kube/rollout_v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: maid-account-manager-service
spec:
  hosts:
    - "*"
  gateways:
    - maid-account-manager-service-gateway
  http:
  - match:
    - uri:
        exact: /api/bill/get
    - uri:
        exact: /api/bill/pay
    route:
      - destination:
          host: maid-account-manager-service
          port:
            number: 8080
          subset: v2
